--- a/5일차/yes24_crawl.ipynb
+++ b/5일차/yes24_crawl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'/Users/mac/.wdm/drivers/chromedriver/mac64/129.0.6668.89/chromedriver-mac-x64/chromedriver'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,37 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.yes24.com/Product/Goods/133213071\n",
-      "https://www.yes24.com/Product/Goods/133870359\n",
-      "https://www.yes24.com/Product/Goods/125557465\n",
-      "https://www.yes24.com/Product/Goods/131930939\n",
-      "https://www.yes24.com/Product/Goods/104663596\n",
-      "https://www.yes24.com/Product/Goods/133312039\n",
-      "https://www.yes24.com/Product/Goods/133199014\n",
-      "https://www.yes24.com/Product/Goods/133236068\n",
-      "https://www.yes24.com/Product/Goods/132560712\n",
-      "https://www.yes24.com/Product/Goods/128266166\n",
-      "https://www.yes24.com/Product/Goods/117014613\n",
-      "https://www.yes24.com/Product/Goods/124999476\n",
-      "https://www.yes24.com/Product/Goods/129602366\n",
-      "https://www.yes24.com/Product/Goods/132181262\n",
-      "https://www.yes24.com/Product/Goods/130135671\n",
-      "https://www.yes24.com/Product/Goods/130174102\n",
-      "https://www.yes24.com/Product/Goods/8759796\n",
-      "https://www.yes24.com/Product/Goods/132565140\n",
-      "https://www.yes24.com/Product/Goods/102457889\n",
-      "https://www.yes24.com/Product/Goods/124043812\n",
-      "https://www.yes24.com/Product/Goods/130500819\n",
-      "https://www.yes24.com/Product/Goods/133824761\n",
-      "https://www.yes24.com/Product/Goods/133813184\n",
-      "https://www.yes24.com/Product/Goods/124043802\n"
+     "ename": "NameError",
+     "evalue": "name 'By' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#1페이지의 링크 데이터 전부 수집\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m browser\u001b[38;5;241m.\u001b[39mfind_element(\u001b[43mBy\u001b[49m\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_name\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mget_attribute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m###1페이지 전체의 링크 데이터\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#browser.find_element(By.CLASS_NAME, 'gd_name') # element: 요소\u001b[39;00m\n\u001b[1;32m      6\u001b[0m datas \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_name\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# elements: 리스트\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'By' is not defined"
      ]
     }
    ],
@@ -132,17 +113,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "********** 현재 1 페이지 수집 중 입니다. **********\n",
-      "********** 현재 2 페이지 수집 중 입니다. **********\n",
-      "********** 현재 3 페이지 수집 중 입니다. **********\n",
-      "['https://www.yes24.com/Product/Goods/133213071', 'https://www.yes24.com/Product/Goods/125557465', 'https://www.yes24.com/Product/Goods/133870359', 'https://www.yes24.com/Product/Goods/131930939', 'https://www.yes24.com/Product/Goods/104663596', 'https://www.yes24.com/Product/Goods/133312039', 'https://www.yes24.com/Product/Goods/133236068', 'https://www.yes24.com/Product/Goods/133199014', 'https://www.yes24.com/Product/Goods/132560712', 'https://www.yes24.com/Product/Goods/117014613', 'https://www.yes24.com/Product/Goods/128266166', 'https://www.yes24.com/Product/Goods/124999476', 'https://www.yes24.com/Product/Goods/8759796', 'https://www.yes24.com/Product/Goods/129602366', 'https://www.yes24.com/Product/Goods/102457889', 'https://www.yes24.com/Product/Goods/130174102', 'https://www.yes24.com/Product/Goods/133824761', 'https://www.yes24.com/Product/Goods/130135671', 'https://www.yes24.com/Product/Goods/132565140', 'https://www.yes24.com/Product/Goods/132181262', 'https://www.yes24.com/Product/Goods/124043812', 'https://www.yes24.com/Product/Goods/133813184', 'https://www.yes24.com/Product/Goods/118322901', 'https://www.yes24.com/Product/Goods/124043802', 'https://www.yes24.com/Product/Goods/133138701', 'https://www.yes24.com/Product/Goods/96547408', 'https://www.yes24.com/Product/Goods/130500819', 'https://www.yes24.com/Product/Goods/124539805', 'https://www.yes24.com/Product/Goods/122120495', 'https://www.yes24.com/Product/Goods/133896038', 'https://www.yes24.com/Product/Goods/129124029', 'https://www.yes24.com/Product/Goods/116586303', 'https://www.yes24.com/Product/Goods/123930880', 'https://www.yes24.com/Product/Goods/133128647', 'https://www.yes24.com/Product/Goods/123930891', 'https://www.yes24.com/Product/Goods/132772043', 'https://www.yes24.com/Product/Goods/104687898', 'https://www.yes24.com/Product/Goods/133757215', 'https://www.yes24.com/Product/Goods/133756359', 'https://www.yes24.com/Product/Goods/95721612', 'https://www.yes24.com/Product/Goods/128917300', 'https://www.yes24.com/Product/Goods/132190133', 'https://www.yes24.com/Product/Goods/109145992', 'https://www.yes24.com/Product/Goods/124225606', 'https://www.yes24.com/Product/Goods/67362730', 'https://www.yes24.com/Product/Goods/133812270', 'https://www.yes24.com/Product/Goods/132754223', 'https://www.yes24.com/Product/Goods/128133897', 'https://www.yes24.com/Product/Goods/125295101', 'https://www.yes24.com/Product/Goods/108192000', 'https://www.yes24.com/Product/Goods/133741785', 'https://www.yes24.com/Product/Goods/23030284', 'https://www.yes24.com/Product/Goods/79297023', 'https://www.yes24.com/Product/Goods/129094064', 'https://www.yes24.com/Product/Goods/132619282', 'https://www.yes24.com/Product/Goods/2312211', 'https://www.yes24.com/Product/Goods/110641272', 'https://www.yes24.com/Product/Goods/111680193', 'https://www.yes24.com/Product/Goods/133127953', 'https://www.yes24.com/Product/Goods/121507789', 'https://www.yes24.com/Product/Goods/124219505', 'https://www.yes24.com/Product/Goods/134021280', 'https://www.yes24.com/Product/Goods/11081680', 'https://www.yes24.com/Product/Goods/118578901', 'https://www.yes24.com/Product/Goods/133811843', 'https://www.yes24.com/Product/Goods/124409868', 'https://www.yes24.com/Product/Goods/133821851', 'https://www.yes24.com/Product/Goods/125492144', 'https://www.yes24.com/Product/Goods/125992096', 'https://www.yes24.com/Product/Goods/67114707', 'https://www.yes24.com/Product/Goods/134021461', 'https://www.yes24.com/Product/Goods/125995791']\n"
+      "********** 현재 1 페이지 수집 중 입니다. **********\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'By' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 15\u001b[0m\n\u001b[1;32m     12\u001b[0m browser\u001b[38;5;241m.\u001b[39mget(url)\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m#1페이지의 링크 데이터 전부 수집\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m browser\u001b[38;5;241m.\u001b[39mfind_element(\u001b[43mBy\u001b[49m\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_name\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mget_attribute(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m###1페이지 전체의 링크 데이터\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m#browser.find_element(By.CLASS_NAME, 'gd_name') # element: 요소\u001b[39;00m\n\u001b[1;32m     19\u001b[0m datas \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_name\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# elements: 리스트\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'By' is not defined"
      ]
     }
    ],
@@ -199,18 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'WebDriver' object has no attribute 'find_elemenet'",
+     "ename": "NameError",
+     "evalue": "name 'browser' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[60], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m browser\u001b[38;5;241m.\u001b[39mget(link_list[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      3\u001b[0m title \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_name\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n\u001b[0;32m----> 4\u001b[0m author \u001b[38;5;241m=\u001b[39m \u001b[43mbrowser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_elemenet\u001b[49m(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_auth\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'WebDriver' object has no attribute 'find_elemenet'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbrowser\u001b[49m\u001b[38;5;241m.\u001b[39mget(link_list[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      3\u001b[0m title \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_name\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n\u001b[1;32m      4\u001b[0m author \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mfind_elemenet(By\u001b[38;5;241m.\u001b[39mCLASS_NAME, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mgd_auth\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'browser' is not defined"
      ]
     }
    ],
